# knowledge_app

./: .coverage  .env.example  .gitignore  CLAUDE.md  PostgreSQL_Cheatsheet.md  README.md  alembic.ini  check_indexes.py  check_tables.py  check_user_count.py  check_users.py  cleanup_test_data.py  create_tables.py  create_users_table.py  docker-compose.yml  fix_enum.py  pytest.ini  requirements.txt  test_error_handling.py
backend/: ...tmpbackup_alembic_current.txt  ...tmpbackup_alembic_history.txt  .flake8  .gitignore  API_SPECIFICATION.md  fix_alembic.sql  hello.txt  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 1483b3da07bd_make_approver_id_required_in_revisions_.py  1e7fb0c9beab_schemas_date.py  3f86054cca98_make_approver_id_nullable_in_revisions_.py  5c5e57c2a070_approvalgroup_group_id_uuid_conversion.py  63a5626073be_add_approval_group_id_to_revisions_table.py  685e3378384d_add_submitted_at_field_to_revisions_.py  acb8ff9afa9b_add_foreign_key_relationship_between_.py  b0964a48ee11_create_all_tables.py  c228a4e4e4f6_model_changes_uuid_conversion.py  dcf8466452cd_add_default_none_to_revision_model.py  e70510a1099e_change_article_publish_start_and_.py
backend/app/: database.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: __init__.py  approval_group.py  article.py  info_category.py  notification.py  revision.py  user.py
backend/app/repositories/: __init__.py  approval_group.py  article.py  (+5 more)
backend/tests/: conftest.py  test_factory_smoke.py  test_fixtures.py
(+310 files in other folders)
